<resources>
    <string name="app_name">stilloa2_WhoWantstoBeAMillionaire</string>
    <string name="question_placeholder">Question Goes Here</string>
    <string name="score_placeholder">Score Goes Here</string>
    <string name="Score_Divider_line">__________________</string>
    <string name="final_answer">Final Answer</string>
    <string name="placeholder4">placeholder4</string>
    <string name="placeholder3">placeholder3</string>
    <string name="placeholder2">placeholder2</string>
    <string name="placeholder1">placeholder1</string>
    <string name="who_wants_to_be_a_millionaire">Who Wants to be a Millionaire</string>
    <string name="q1">What is the name of this app?</string>
    <string name="q1c1">Card Quiz Game</string>
    <string name="q1c2">Who Wants to be a Millionaire?</string>
    <string name="q1c3">Facebook</string>
    <string name="q1c4">Deal or No Deal</string>
    <string name="i_ll_take_my_winnings">I\'ll take my winnings.</string>
    <string name="background">Background</string>
    <string name="q2">What is the most densely populated US state?</string>
    <string name="q2c1">Vietnam</string>
    <string name="q2c2">Texas</string>
    <string name="q2c3">New Jersey</string>
    <string name="q2c4">Rhode Island</string>
    <string name="q3">Balanced forces act on objects that are:</string>
    <string name="q3c1">Stationary</string>
    <string name="q3c2">Rising</string>
    <string name="q3c3">Falling</string>
    <string name="q3c4">None of the above</string>
    <string name="q4">The top number of a fraction is called the: </string>
    <string name="q4c1">Denominator</string>
    <string name="q4c2">Integral</string>
    <string name="q4c3">Coefficient</string>
    <string name="q4c4">Numerator</string>
    <string name="q5">How many bones do sharks have in their body?</string>
    <string name="q5c1">68</string>
    <string name="q5c2">0</string>
    <string name="q5c3">202</string>
    <string name="q5c4">13</string>
    <string name="loss_result">You lose!</string>
    <string name="play_again">Play Again</string>
    <string name="q6">Which among the following species of animals is the most endangered?</string>
    <string name="q6c1">Panda Bears</string>
    <string name="q6c2">Vaquita</string>
    <string name="q6c3">Malayan Tiger</string>
    <string name="q6c4">Tapanuli Orangutan</string>
    <string name="q7">In the 2017 video game Nier: Automata, which of the following is a major character named after a famous philosopher?</string>
    <string name="q7c1">Confucius</string>
    <string name="q7c2">Aristotle</string>
    <string name="q7c3">Pascal</string>
    <string name="q7c4">Maurice</string>
    <string name="q8">What is the capital of Slovenia?</string>
    <string name="q8c1">N\'Djamena</string>
    <string name="q8c2">Yamoussoukro</string>
    <string name="q8c3">Reykjavík</string>
    <string name="q8c4">Ljubljana</string>
    <string name="q9">Pizza Margherita is made with what three ingredients?</string>
    <string name="q9c1">Tomato, arugula and parmesian cheese</string>
    <string name="q9c2">Tomato, ricotta and basil</string>
    <string name="q9c3">Tomato, basil and mozzarella cheese</string>
    <string name="q9c4">Garlic, basil and olive oil</string>
    <string name="q10">In Python programming, what is the operator \":=\" called, which allows assignment to be done mid expression?</string>
    <string name="q10c1">Colon equals</string>
    <string name="q10c2">The walrus operator</string>
    <string name="q10c3">The hippopotamus operator</string>
    <string name="q10c4">Unnecessary</string>
    <string name="q11">What language does the name \"Manhattan\" originate from?</string>
    <string name="q11c1">The English language</string>
    <string name="q11c2">The Munsee Lenape language</string>
    <string name="q11c3">The Sioux language</string>
    <string name="q11c4">The German language</string>
    <string name="q12">The first time someone bought real-world goods with bitcoins, 10,000 of them (worth over US$90 million today) were exchanged for what?</string>
    <string name="q12c1">Two pizzas</string>
    <string name="q12c2">A calendar</string>
    <string name="q12c3">Sneakers</string>
    <string name="q12c4">A copy of the Bible</string>
    <string name="q13">In the popular video game series \"Monster Hunter\", which of the following is NOT a large monster?</string>
    <string name="q13c1">Behemoth</string>
    <string name="q13c2">Legiacrus</string>
    <string name="q13c3">Shara Ishvalda</string>
    <string name="q13c4">Telethia</string>
    <string name="q14">Which European country technically borders Brazil, due to one of its \"overseas departments\" does?</string>
    <string name="q14c1">Germany</string>
    <string name="q14c2">Great Britain</string>
    <string name="q14c3">France</string>
    <string name="q14c4">Italy</string>
    <string name="q15">Which of the following video games was developed by a Japanese studio?</string>
    <string name="q15c1">Valorant</string>
    <string name="q15c2">Furi</string>
    <string name="q15c3">Bioshock: Infinite</string>
    <string name="q15c4">Bloodborne</string>
    <string name="win_result">You won the $1000000 prize!!!!</string>
</resources>