<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/millionaire"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/millionaire"
            android:contentDescription="@string/who_wants_to_be_a_millionaire" />
        <!--Logo.-->

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="monospace"
            android:layout_marginTop="10dp"
            android:text="@string/score_placeholder"
            android:textAlignment="center"
            android:textColor="@color/gold"
            android:background="@drawable/border_alt"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/Score_Divider_line"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp"
            android:text="@string/question_placeholder"
            android:textAlignment="center"
            android:background="@drawable/border"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder1"
                android:paddingEnd="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:buttonTint="@color/gold"
                android:textColor="@color/white"
                android:background="@drawable/border"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder2"
                android:paddingEnd="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:buttonTint="@color/gold"
                android:textColor="@color/white"
                android:background="@drawable/border"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder3"
                android:paddingEnd="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:buttonTint="@color/gold"
                android:textColor="@color/white"
                android:background="@drawable/border"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder4"
                android:paddingEnd="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:buttonTint="@color/gold"
                android:textColor="@color/white"
                android:background="@drawable/border"
                android:textSize="20sp"/>
        </RadioGroup>

        <android.widget.Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/final_answer"
            android:textSize="20sp"
            android:textColor="@color/gold"
            android:background="@drawable/border_alt"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/give_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="14dp"
            android:layout_gravity="center"
            android:text="@string/i_ll_take_my_winnings"
            android:textColor="@color/gold"
            android:paddingHorizontal="10dp"
            android:background="@drawable/border_text"
            android:onClick="onClick_give_up" />

    </LinearLayout>


</ScrollView>