<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/millionaire"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/millionaire"
        android:contentDescription="@string/who_wants_to_be_a_millionaire" />
    <!--Logo.-->

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="monospace"
        android:layout_marginTop="10dp"
        android:text="@string/loss_result"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/border_alt"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="monospace"
        android:layout_marginTop="10dp"
        android:text="@string/score_placeholder"
        android:textAlignment="center"
        android:textColor="@color/gold"
        android:background="@drawable/border_alt"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/Score_Divider_line"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <android.widget.Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/play_again"
        android:textSize="28sp"
        android:textColor="@color/gold"
        android:background="@drawable/border_alt"
        android:onClick="onClick" />

    </LinearLayout>
</ScrollView>